--- a/templates/paiement/show.html.twig
+++ b/templates/paiement/show.html.twig
@@ -6,9 +6,9 @@
 <h2 class="mb-4">Détails du Paiement</h2>
 
 <div class="card p-4 shadow-sm">
-    <p><strong>Id :</strong> {{ paiement.id }}</p>
+    <p><strong># :</strong> {{ paiement.id }}</p>
     <p><strong>Montant :</strong> {{ paiement.montant }}</p>
-    <p><strong>Colis :</strong> {{ paiement.colis.numero }}</p>
+    <p><strong>Expédition :</strong> {{ paiement.expedition.numero }}</p>
     <p><strong>Mode :</strong> {{ paiement.mode }}</p>
     <p><strong>Statut :</strong> {{ paiement.statut }}</p>
     <p><strong>Date de Paiement :</strong> {{ paiement.datePaiement ? paiement.datePaiement|date('d-m-Y H:i:s') : '' }}</p>
@@ -16,6 +16,11 @@
     <a href="{{ path('app_paiement_edit', {id: paiement.id}) }}" class="btn btn-warning">
         <i class="bi bi-pencil"></i> Modifier
     </a>
+    <a href="{{ path('app_paiement_recu', { id: paiement.id }) }}" 
+    class="btn btn-primary" target="_blank">
+        <i class="bi bi-printer"></i> Imprimer le reçu
+    </a>
+
     <a href="{{ path('app_paiement_index') }}" class="btn btn-secondary">Retour</a>
 </div>
 
