ajout de port et tarif_port après erreur

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -79,6 +79,18 @@
                 </a>
             </li>
 
+            <li class="nav-item mb-2">
+                <a class="nav-link" href="{{ path('app_port_index') }}">
+                    <i class="bi bi-people-fill"></i> Ports
+                </a>
+            </li>
+
+            <li class="nav-item mb-2">
+                <a class="nav-link" href="{{ path('app_tarif_port_index') }}">
+                    <i class="bi bi-person-badge"></i> Tarifs Ports
+                </a>
+            </li>
+
             <li class="nav-item mt-4">
                 <a class="nav-link text-warning" href="#">
                     <i class="bi bi-door-open"></i> Déconnexion
