--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -92,7 +92,7 @@
             </li>
 
             <li class="nav-item mt-4">
-                <a class="nav-link text-warning" href="#">
+                <a class="nav-link text-warning" href="{{ path('app_logout') }}">
                     <i class="bi bi-door-open"></i> Déconnexion
                 </a>
             </li>
