--- a/templates/expedition/index.html.twig
+++ b/templates/expedition/index.html.twig
@@ -5,9 +5,21 @@
 {% block body %}
     <h2 class="mb-4">Liste des Expeditions</h2>
 
-    <a href="{{ path('app_expedition_new') }}" class="btn btn-primary mb-3">
-        <i class="bi bi-plus-circle"></i> Nouvelle Expédition
-    </a>
+    <div class="row mb-3">
+        <div class="col-md-6">
+            <form method="get" class="d-flex">
+                <input type="text" name="search" class="form-control me-2" placeholder="Rechercher par numéro, type ou colis associé..." value="{{ search }}">
+                <button type="submit" class="btn btn-outline-primary">
+                    <i class="bi bi-search"></i> Rechercher
+                </button>
+            </form>
+        </div>
+        <div class="col-md-6 text-end">
+            <a href="{{ path('app_expedition_new') }}" class="btn btn-primary">
+                <i class="bi bi-plus-circle"></i> Nouvelle Expédition
+            </a>
+        </div>
+    </div>
 
     <table class="table table-striped table-hover">
         <thead class="table-primary">
